# device_soc_qualcomm

common/hal/usb/msm8953/include/: default_config.h
msm8953/: soc.gni
msm8953/hardware/: BUILD.gn
msm8953/hardware/display/: BUILD.gn
msm8953/hardware/display/src/display_device/drm/: drm_device.cpp
msm8953/hardware/display/src/display_gralloc/: allocator.h
msm8953/hardware/gpu/: BUILD.gn
msm8953/hardware/gpu/lib64/: libEGL.so.1.0.0  libGLESv1_CM.so.1.1.0  libGLESv2.so.2.0.0  libgbm.so.1.0.0  libglapi.so.0.0.0
